--- a/BSWHPhotoPicker/Resources/en.lproj/Localizable.strings
+++ b/BSWHPhotoPicker/Resources/en.lproj/Localizable.strings
@@ -41,7 +41,7 @@
 "Birthday" = "Birthday";
 "Travel" = "Travel";
 "Scrapbook" = "Scrapbook";
-"photoframe" = "photo frame";
+"photoframe" = "Photo Frame";
 
 "Color" = "Color";
 "Texture" = "Texture";
